--- a/src/partials/leave.html
+++ b/src/partials/leave.html
@@ -10,39 +10,68 @@
     </p>
     <div class="leave__content-group">
       <div class="adv-box">
-
         <picture class="adv-box__img">
-          <source srcset=" /assets/img/leave/student.webp 1x, /assets/img/leave/student@2x.webp 2x"
-            media="(min-width: 1280px)" />
-          <img src="/assets/img/leave/student.jpg" width="492" height="392" alt="Our student" />
+          <source
+            srcset="
+              /assets/img/leave/student.webp    1x,
+              /assets/img/leave/student@2x.webp 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <img
+            src="/assets/img/leave/student.jpg"
+            width="492"
+            height="392"
+            alt="Our student"
+          />
         </picture>
 
         <div class="leave__wrapper">
           <p class="adv-box__text-accent">1000</p>
           <p class="adv-box__text">
-            of our online English language lessons! This journey has been full of
-            discovery, growth and unforgettable moments, and we are happy to share
-            this joyful event with you.
+            of our online English language lessons! This journey has been full
+            of discovery, growth and unforgettable moments, and we are happy to
+            share this joyful event with you.
           </p>
         </div>
       </div>
       <form class="leave__form" method="post">
         <ul class="form__list">
           <li class="leave__form-group">
-            <input class="leave__input" type="text" placeholder="Name" title="Our name" />
+            <input
+              class="leave__input"
+              type="text"
+              placeholder="Name"
+              title="Our name"
+            />
             <div class="error-message"></div>
           </li>
           <li class="leave__form-group">
-            <input class="leave__input" type="email" placeholder="Email" title="Input valid email" />
+            <input
+              class="leave__input"
+              type="email"
+              placeholder="Email"
+              title="Input valid email"
+            />
             <div class="error-message"></div>
           </li>
           <li class="leave__form-group">
-            <input class="leave__input" type="tel" placeholder="Phone" title="Input valid phone number"
-              pattern="[\+]\d{1}\s[\(]\d{3}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}" />
+            <input
+              class="leave__input"
+              type="tel"
+              placeholder="Phone"
+              title="Input valid phone number"
+              pattern="[\+]\d{1}\s[\(]\d{3}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}"
+            />
             <div class="error-message"></div>
           </li>
           <li class="leave__form-group">
-            <textarea class="leave__textarea" name="comment" id="comment" placeholder="Comment"></textarea>
+            <textarea
+              class="leave__textarea"
+              name="comment"
+              id="comment"
+              placeholder="Comment"
+            ></textarea>
             <div class="error-message"></div>
           </li>
         </ul>
@@ -51,12 +80,22 @@
 
           <ul class="leave__rb-box">
             <li>
-              <input class="leave__radio-btn__input visually-hidden" type="radio" name="teacher" id="maria"
-                value="maria" checked />
-              <label class="leave__radio-btn__label " for="maria">
+              <input
+                class="leave__radio-btn__input visually-hidden"
+                type="radio"
+                name="teacher"
+                id="maria"
+                value="maria"
+                checked
+              />
+              <label class="leave__radio-btn__label" for="maria">
                 <span class="leave__radio-btn__label__span">
                   <span class="leave__radio-btn__icon-uncheck"></span>
-                  <svg class="leave__radio-btn__icon-check" width="20" height="20">
+                  <svg
+                    class="leave__radio-btn__icon-check"
+                    width="20"
+                    height="20"
+                  >
                     <use href="/public/icons.svg#radio-btn"></use>
                   </svg>
                 </span>
@@ -65,12 +104,21 @@
             </li>
             <li>
               <div>
-                <input class="leave__radio-btn__input visually-hidden" type="radio" name="teacher" id="artem"
-                  value="artem" />
+                <input
+                  class="leave__radio-btn__input visually-hidden"
+                  type="radio"
+                  name="teacher"
+                  id="artem"
+                  value="artem"
+                />
                 <label class="leave__radio-btn__label" for="artem">
                   <span class="leave__radio-btn__label__span">
                     <span class="leave__radio-btn__icon-uncheck"></span>
-                    <svg class="leave__radio-btn__icon-check" width="20" height="20">
+                    <svg
+                      class="leave__radio-btn__icon-check"
+                      width="20"
+                      height="20"
+                    >
                       <use href="/public/icons.svg#radio-btn"></use>
                     </svg>
                   </span>
@@ -80,12 +128,21 @@
             </li>
             <li>
               <div>
-                <input class="leave__radio-btn__input visually-hidden" type="radio" name="teacher" id="ilona"
-                  value="ilona" />
+                <input
+                  class="leave__radio-btn__input visually-hidden"
+                  type="radio"
+                  name="teacher"
+                  id="ilona"
+                  value="ilona"
+                />
                 <label class="leave__radio-btn__label" for="ilona">
                   <span class="leave__radio-btn__label__span">
                     <span class="leave__radio-btn__icon-uncheck"></span>
-                    <svg class="leave__radio-btn__icon-check" width="20" height="20">
+                    <svg
+                      class="leave__radio-btn__icon-check"
+                      width="20"
+                      height="20"
+                    >
                       <use href="/public/icons.svg#radio-btn"></use>
                     </svg>
                   </span>
@@ -95,12 +152,21 @@
             </li>
             <li>
               <div>
-                <input class="leave__radio-btn__input visually-hidden" type="radio" name="teacher" id="volodymyr"
-                  value="volodymyr" />
+                <input
+                  class="leave__radio-btn__input visually-hidden"
+                  type="radio"
+                  name="teacher"
+                  id="volodymyr"
+                  value="volodymyr"
+                />
                 <label class="leave__radio-btn__label" for="volodymyr">
                   <span class="leave__radio-btn__label__span">
                     <span class="leave__radio-btn__icon-uncheck"></span>
-                    <svg class="leave__radio-btn__icon-check" width="20" height="20">
+                    <svg
+                      class="leave__radio-btn__icon-check"
+                      width="20"
+                      height="20"
+                    >
                       <use href="/public/icons.svg#radio-btn"></use>
                     </svg>
                   </span>
@@ -109,7 +175,6 @@
               </div>
             </li>
           </ul>
-
         </fieldset>
         <button class="leave__btn" type="submit">Send</button>
         <p class="leave__btn-descr">
