--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -46,6 +46,7 @@
               src="/assets/img/reviews/mykhailo@1x"
               alt="mans avatar"
               width="50"
+              height="50"
               class="review-avatar_image"
             />
             <div class="reviews__avatar__text--container">
