fix style in footer

--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -176,9 +176,10 @@
   }
 }
 
-.link-container {
+.link-container ul {
   display: flex;
-  gap: 10px;
+  flex-direction: row;
+  gap: 18px;
 }
 
 .copyright-text,
