--- a/src/partials/leave.html
+++ b/src/partials/leave.html
@@ -9,8 +9,8 @@
       message and we'll get back to you shortly.
     </p>
     <div class="leave__content-group">
-      <div class="adv-box">
-        <picture class="adv-box__img">
+      <div class="offer-box">
+        <picture class="offer-box__img">
           <source
             srcset="
               /assets/img/leave/student.webp    1x,
@@ -27,8 +27,8 @@
         </picture>
 
         <div class="leave__wrapper">
-          <p class="adv-box__text-accent">1000</p>
-          <p class="adv-box__text">
+          <p class="offer-box__text-accent">1000</p>
+          <p class="offer-box__text">
             of our online English language lessons! This journey has been full
             of discovery, growth and unforgettable moments, and we are happy to
             share this joyful event with you.
