--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -16,7 +16,9 @@
         </li>
 
         <li class="about-us_list__item">
-          <p class="about-us_list__text">Wide range of course levels and options</p>
+          <p class="about-us_list__text">
+            Wide range of course levels and options
+          </p>
         </li>
 
         <li class="about-us_list__item">
@@ -24,7 +26,9 @@
         </li>
 
         <li class="about-us_list__item">
-          <p class="about-us_list__text">Comprehensive language support services</p>
+          <p class="about-us_list__text">
+            Comprehensive language support services
+          </p>
         </li>
       </ol>
 
