--- a/src/css/components/proposal.css
+++ b/src/css/components/proposal.css
@@ -1,6 +1,6 @@
-@media screen and (max-width: 767.98px) {
+@media screen and (max-width: 767px) {
   .proposal .container {
-    width: clamp(278px, calc(100% - 40px), 335px);
+    width: clamp(278px, calc(100vw - 40px), 335px);
     min-height: 737px;
     padding-top: 40px;
     padding-bottom: 64px;
@@ -26,7 +26,7 @@
     font-size: 38px;
     font-weight: 700;
     line-height: 1.05;
-    width: clamp(250px, calc(100%-40px), 295px);
+    width: clamp(278px, calc(100vw - 40px), 335px);
     letter-spacing: 0em;
     padding: 0;
   }
@@ -36,7 +36,6 @@
   }
 
   .proposal__wrapper-full .proposal__first-extrabg-wrapper {
-    /* width: clamp(250px, calc(100% - 40px), 295px); */
     min-height: 408px;
     position: relative;
     background-color: var(--white-color);
@@ -116,7 +115,6 @@
     font-size: 14px;
     font-weight: 700;
     line-height: 1.71;
-    text-align: center;
     transition: background-color var(--transition-time) var(--transition-effect);
   }
 
