--- a/src/css/components/about-us.css
+++ b/src/css/components/about-us.css
@@ -1,5 +1,5 @@
-.section__subtitle--center {
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .section__subtitle--center {
     width: 658px;
   }
 }
@@ -8,13 +8,17 @@
   display: flex;
   gap: 20px;
   justify-content: center;
+}
 
-  @media (max-width: 1279.98px) {
-    flex-direction: column;
-  }
-
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .about-us__wrapper {
     gap: 32px;
+  }
+}
+
+@media (max-width: 1279.98px) {
+  .about-us__wrapper {
+    flex-direction: column;
   }
 }
 
@@ -24,13 +28,17 @@
   gap: 32px;
 
   counter-reset: customCounter;
+}
 
-  @media (max-width: 767.98px) {
+@media (max-width: 767.98px) {
+  .about-us_list {
     flex-direction: column;
     gap: 20px;
   }
+}
 
-  @media (min-width: 1280px) {
+@media (min-width: 1280px) {
+  .about-us_list {
     width: 682px;
   }
 }
@@ -39,13 +47,17 @@
   padding: 32px;
   border-radius: 16px;
   background: var(--box-bg-color);
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .about-us_list__item {
     width: 336px;
     border-radius: 30px;
   }
+}
 
-  @media (min-width: 1280px) {
+@media (min-width: 1280px) {
+  .about-us_list__item {
     width: 325px;
   }
 }
@@ -77,13 +89,17 @@
   padding: 50px 40px;
   border-radius: 16px;
   background-color: var(--accent-color);
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .about-us__img-wrap {
     padding: 32px 40px;
     border-radius: 30px;
   }
+}
 
-  @media (min-width: 1280px) {
+@media (min-width: 1280px) {
+  .about-us__img-wrap {
     padding: 90px 27px;
   }
 }
