--- a/src/css/components/leave.css
+++ b/src/css/components/leave.css
@@ -3,19 +3,78 @@
   font-weight: 600;
 }
 
+@media screen and (min-width: 768px) {
+  .leave .section__title {
+    margin-bottom: 16px;
+    font-weight: 700;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .leave .section__title {
+    margin-bottom: 16px;
+  }
+}
+
 .leave .section__subtitle {
   margin-bottom: 20px;
   color: var(--secondary-text-color);
 }
 
+@media screen and (min-width: 768px) {
+  .leave .section__subtitle {
+    margin-bottom: 64px;
+    width: 586px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .leave .section__subtitle {
+    margin-bottom: 64px;
+    width: 709px;
+  }
+}
+
 .offer-box {
-  display:  none;
+  display: none;
+}
+
+@media screen and (min-width: 1280px) {
+  .offer-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 0;
+    flex-basis: 492px;
+    overflow: hidden;
+    border-radius: 30px;
+    background-color: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .leave__form {
+    padding: 0 102px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .leave__form {
+    padding: 0;
+    flex-basis: calc((100% - 24px) / 2);
+  }
 }
 
 .form__list {
   display: flex;
   flex-direction: column;
   gap: 18px;
+}
+
+@media screen and (min-width: 768px) {
+  .form__list > li:last-of-type {
+    margin-bottom: 32px;
+  }
 }
 
 .form__list > li:last-of-type {
@@ -38,6 +97,13 @@
   border-color: var(--accent-color);
 }
 
+@media screen and (min-width: 768px) {
+  .leave__input {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
 .leave__textarea {
   width: 100%;
   height: 94px;
@@ -56,6 +122,14 @@
   border-color: var(--accent-color);
 }
 
+@media screen and (min-width: 768px) {
+  .leave__textarea {
+    height: 104px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
 .leave__radio-btn__icon-check {
   padding: 2px;
   box-sizing: content-box;
@@ -64,6 +138,12 @@
   top: -2px;
   left: -32px;
   transition: fill var(--transition-time) var(--transition-effect);
+}
+
+@media screen and (min-width: 768px) {
+  .leave__radio-btn__icon-check {
+    top: 0;
+  }
 }
 
 .leave__radio-btn__icon-uncheck {
@@ -79,12 +159,25 @@
   left: -29px;
 }
 
+@media screen and (min-width: 768px) {
+  .leave__radio-btn__icon-uncheck {
+    top: 3px;
+  }
+}
+
 .leave__radio-btn__label {
   color: var(--primary-text-color);
   font-size: 14px;
   line-height: 24px;
   letter-spacing: -0.02em;
   padding-left: 32px;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .leave__radio-btn__label {
+    font-size: 18px;
+  }
 }
 
 .leave__radio-btn__label__span {
@@ -101,6 +194,13 @@
   color: var(--secondary-text-color);
   font-size: 12px;
   line-height: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .leave__btn-descr {
+    font-size: 14px;
+    line-height: 24px;
+  }
 }
 
 .leave__btn {
@@ -124,6 +224,22 @@
   background-color: var(--dark-hover-color);
 }
 
+@media screen and (min-width: 768px) {
+  .leave__btn {
+    padding: 16px 0;
+    font-size: 18px;
+    line-height: 28px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .leave__btn {
+    padding: 16px 0;
+    font-size: 18px;
+    line-height: 28px;
+  }
+}
+
 .leave__rb-fieldset {
   display: flex;
   flex-direction: column;
@@ -132,6 +248,12 @@
   margin: 0 0 40px;
   line-height: 1.15;
   border: none;
+}
+
+@media screen and (min-width: 768px) {
+  .leave__rb-fieldset {
+    margin-bottom: 32px;
+  }
 }
 
 .leave__rb-title {
@@ -150,65 +272,16 @@
 }
 
 @media screen and (min-width: 768px) {
-  .leave .section__title {
-    margin-bottom: 16px;
-    font-weight: 700;
-  }
-
-  .leave .section__subtitle {
-    margin-bottom: 64px;
-    width: 586px;
-  }
-
-  .leave__form {
-    padding: 0 102px;
-  }
-
-  .form__list > li:last-of-type {
-    margin-bottom: 32px;
-  }
-
-  .leave__btn {
-    padding: 16px 0;
-    font-size: 18px;
-    line-height: 28px;
-  }
-
-  .leave__btn-descr {
-    font-size: 14px;
-    line-height: 24px;
-  }
-
-  .leave__input {
-    font-size: 16px;
-    line-height: 24px;
-  }
-
-  .leave__textarea {
-    height: 104px;
-    font-size: 16px;
-    line-height: 24px;
-  }
-
   .leave__rb-box {
     flex-direction: row;
     gap: 16px;
   }
+}
 
-  .leave__radio-btn__label {
-    font-size: 18px;
-  }
-
-  .leave__radio-btn__icon-check {
-    top: 0;
-  }
-
-  .leave__radio-btn__icon-uncheck {
-    top: 3px;
-  }
-
-  .leave__rb-fieldset {
-    margin-bottom: 32px;
+@media screen and (min-width: 1280px) {
+  .leave__content-group {
+    display: flex;
+    gap: 32px;
   }
 }
 
@@ -224,29 +297,17 @@
     padding: 20px 20px 40px;
     text-align: center;
   }
+}
 
-  .leave__content-group {
-    display: flex;
-    gap: 32px;
-  }
-
-  .offer-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 0;
-    flex-basis: 492px;
-    overflow: hidden;
-    border-radius: 30px;
-    background-color: var(--accent-color);
-  }
-
+@media screen and (min-width: 1280px) {
   .offer-box__img {
     clip-path: path(
       'M0 275.673V0H493V276.982C439.005 347.087 348.961 393 247.001 393C144.408 393 53.879 346.515 0 275.673Z'
     );
   }
+}
 
+@media screen and (min-width: 1280px) {
   .offer-box__text-accent {
     color: var(--white-color);
     font-size: 40px;
@@ -254,39 +315,11 @@
     line-height: 48px;
     letter-spacing: -0.02em;
   }
+}
 
+@media screen and (min-width: 1280px) {
   .offer-box__text {
     color: var(--light-text-color);
-    font-size: 16px;
-    line-height: 24px;
-  }
-
-  .leave__form {
-    padding: 0;
-    flex-basis: calc((100% - 24px) / 2);
-  }
-
-  .leave .section__title {
-    margin-bottom: 16px;
-  }
-
-  .leave .section__subtitle {
-    width: 709px;
-    margin-bottom: 64px;
-  }
-
-  .leave__btn {
-    padding: 16px 0;
-    font-size: 18px;
-    line-height: 28px;
-  }
-
-  .leave__input {
-    font-size: 16px;
-    line-height: 24px;
-  }
-
-  .leave__textarea {
     font-size: 16px;
     line-height: 24px;
   }
