--- a/src/css/components/teachers.css
+++ b/src/css/components/teachers.css
@@ -9,8 +9,10 @@
   flex-direction: column;
   align-items: center;
   row-gap: 40px;
+}
 
-  @media (768px <= width) {
+@media screen and (min-width: 768px) {
+  .teachers-list {
     justify-content: center;
     align-items: start;
     flex-direction: row;
@@ -23,12 +25,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
 
-  @media (768px <= width) {
+@media screen and (min-width: 768px) {
+  .teacher-list__item {
     width: 272px;
   }
+}
 
-  @media (1280px <= width) {
+@media screen and (min-width: 1280px) {
+  .teacher-list__item {
     width: 232px;
   }
 }
@@ -56,8 +62,10 @@
   text-align: center;
   font-size: 14px;
   line-height: 1.71; /* 171.429% */
+}
 
-  @media (768px <= width) {
+@media screen and (min-width: 768px) {
+  .skills {
     font-size: inherit;
     line-height: 1.5;
   }
