--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,7 +32,7 @@
 :root {
   font-family: 'Manrope', sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   font-weight: 400;
 
   color: var(--primary-text-color);
