--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -9,7 +9,7 @@
       scenarios
     </p>
     <ul class="lessons__menu">
-      <li class="lessons__items">
+      <li class="lessons__item">
         <strong class="lessons-strong">Practice</strong>
         <span class="lessons-span">40$ / month</span>
         <p class="lessons__text">
@@ -19,7 +19,7 @@
         </p>
         <a href="#leave" class="lessons__btn">Leave an application</a>
       </li>
-      <li class="lessons__items lessons__items--active">
+      <li class="lessons__item lessons__item--active">
         <strong class="lessons-strong lessons-strong--active">Standart</strong>
         <span class="lessons-span lessons-span--active">70$ / month</span>
         <p class="lessons__text lessons__text--active">
@@ -31,7 +31,7 @@
           Leave an application
         </a>
       </li>
-      <li class="lessons__items">
+      <li class="lessons__item">
         <strong class="lessons-strong">Individual</strong>
         <span class="lessons-span">99$ / month</span>
         <p class="lessons__text">
