--- a/src/css/components/proposal.css
+++ b/src/css/components/proposal.css
@@ -26,7 +26,7 @@
     font-size: 38px;
     font-weight: 700;
     line-height: 1.05;
-    width: clamp(278px, calc(100vw - 40px), 335px);
+    width: clamp(240px, calc(100% - 20px), 295px);
     letter-spacing: 0em;
     padding: 0;
   }
